--- a/narrative-dot-captions.html
+++ b/narrative-dot-captions.html
@@ -1649,5 +1649,36 @@
     }
   </style>
 
+  <div class="nav-buttons" id="nav-buttons">
+    <button onclick="navigate(-1)">Previous</button>
+    <button onclick="handleNextClick()">Next</button>
+  </div>
+
+  <script>
+    const sections = document.querySelectorAll("section");
+    let currentSection = 0;
+
+    function showSection(index) {
+      sections.forEach((section, i) => {
+        section.classList.toggle("active", i === index);
+      });
+    }
+
+    function navigate(direction) {
+      currentSection = Math.max(0, Math.min(sections.length - 1, currentSection + direction));
+      showSection(currentSection);
+    }
+    
+    function handleNextClick() {
+      if (currentSection === sections.length - 1) {
+        window.location.href = "https://chilinhhovo.github.io/cartoon/";
+      } else {
+        navigate(1);
+      }
+    }
+
+    showSection(currentSection);
+  </script>
+
 </body>
 </html>
