--- a/narrative-dot-captions.html
+++ b/narrative-dot-captions.html
@@ -796,6 +796,8 @@
     </div>
   </div>
   <div class="content-container">
+    <p>Captions with fewer words tended to score higher in funniness. The sweet spot? Around 50 characters. Brevity helps—but it’s no guarantee.</p>
+    <p>We also found a subtle signal in punctuation. Captions ending in question marks slightly underperformed compared to those ending in periods or with no punctuation at all. The best jokes don’t always ask—they tell.</p>
   </div>
   <div class="full-width-container">
 
@@ -1429,7 +1431,7 @@
  
   <div class="full-width-container">
     <div class="content-container">
-      <p>To better understand the humor landscape, we used a clustering algorithm to helps us identify the underlying humor categories that people find funny.</p>
+      <p>These surface-level clues are helpful, but they don’t tell the whole story. So we turned to machine learning to map humor styles across thousands of captions.</p>
       <p>Using UMAP and clustering on sentence embeddings, we projected all captions into a 2D humor map. Each point is a caption, each color a style.</p>
       <a href="https://chilinhhovo.github.io/cluster_1/" class="visualization-link">Explore the UMAP Visualizationsection →</a>
     </div>
