--- a/index.html
+++ b/index.html
@@ -671,11 +671,7 @@ fetch("pre_grid_caption_frames.json")
   });
 
 function handleNextClick() {
-  if (currentSection === sections.length - 1) {
-    window.location.href = "https://chilinhhovo.github.io/cartoon/";
-  } else {
-    navigate(1);
-  }
+  window.location.href = "https://chilinhhovo.github.io/human_captions/narrative-dot-captions.html";
 }
 </script>
 
