--- a/narrative-dot-captions.html
+++ b/narrative-dot-captions.html
@@ -204,32 +204,6 @@
   <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollama/3.2.0/scrollama.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.3.0/d3.min.js"></script>
-  <style>
-    /* Navigation */
-    .nav-buttons {
-      text-align: center;
-      margin: 2rem;
-      position: relative;
-      z-index: 5;
-    }
-    
-    .nav-buttons button {
-      padding: 0.75rem 1.5rem;
-      margin: 0 0.5rem;
-      font-size: 1rem;
-      background: white;
-      color: black;
-      border: 2px solid black;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-    
-    .nav-buttons button:hover {
-      background: #f6f6f6;
-    }
-  </style>
 </head>
 <body>
 
@@ -823,7 +797,7 @@
   </div>
   <div class="full-width-container">
     <div class="content-container">
-      <p>We also found a subtle signal in punctuation. Captions ending in question marks slightly underperformed compared to those ending in periods or with no punctuation at all. The best jokes don't always ask—they tell. </p>
+      <p>We also found a subtle signal in punctuation. Captions ending in question marks slightly underperformed compared to those ending in periods or with no punctuation at all. The best jokes don’t always ask—they tell. </p>
     </div>
     </div>
   </div>
@@ -1458,7 +1432,7 @@
   </div>
     <div class="full-width-container">
       <div class="content-container">
-        <p>Captions with fewer words tended to score higher in funniness. The sweet spot? Around 50 characters. Brevity helps—but it's no guarantee.</p>
+        <p>Captions with fewer words tended to score higher in funniness. The sweet spot? Around 50 characters. Brevity helps—but it’s no guarantee.</p>
       </div>
     </div>
   <div class="full-width-container">
@@ -1682,10 +1656,6 @@
       background: #e0e0e0;
     }
   </style>
-
-  <div class="nav-buttons">
-    <button onclick="handleNextClick()">Next</button>
-  </div>
 
 </body>
 </html>
