--- a/index.html
+++ b/index.html
@@ -551,9 +551,7 @@
 
   <div class="content-container">
 <div class="full-width-container">
-    <div class="nav-buttons">
-      <button onclick="handleNextClick()">Next</button>
-    </div>
+    <a href="https://chilinhhovo.github.io/human_captions_1/">next > </a>
   </div>
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
