--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <section data-frame="0">
     <div class="text-block">
       <h2>New Yorker Cartoon Contest #567</h2>
-      <p>We focused on one cartoon — a man embedded in a mattress with a coffee cup and briefcase. Readers submitted 4,014 captions submitted to the New Yorker contest 567.</p>
+      <p>As an example, we first focused on one cartoon — a man embedded in a mattress with a coffee cup and briefcase. Readers submitted 4,014 captions submitted to the New Yorker contest 567.</p>
     </div>
   </section>
   
